descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2010-02-XX  Release 7.16.8                                     ---
----------------------------------------------------------------------

* MGED help menu lists all commands with documentation - Cliff Yapp
* Improved put_comb command usage and added documentation - Cliff Yapp
* Improve behavior of editor invocation in classic mode - Cliff Yapp
* reorganization of archer buttons, panels, & preferences - Bob Parker
* fix invocation of fbclear from MGED on Windows - Bob Parker
* fixed obj-g crash when importing multiple objects - Sean Morrison
* continued work on MGED Docbook man page conversions - Janine Gettier
* integration of mged authorship dedication into archer - Bob Parker
* improved behavior of mged initialization options - Bob Parker
* fixed namspace initialization failure in rtwizard - Bob Parker
* removed the pcd-pix image conversion tool - Sean Morrison
* fixed coil tool -S option, now takes 6 parameters - Cliff Yapp
* fixed g-egg coordinate and polygon format bugs - Erik Greenwald
* improved obj-g import support for object names - Sean Morrison
* fix rtweight bug where incorrect units were reported - Cliff Yapp
* added initial manual page documentation for rtwizard - Sean Morrison
* support for metaball conversion to polygonal format - Erik Greenwald


----------------------------------------------------------------------
--- 2010-01-04  Release 7.16.6                                     ---
----------------------------------------------------------------------

Considerable effort continues towards improving BRL-CAD's
documentation.  Janine Gettier has now converted the documentation for
approximately 200 of MGED's commands into the Docbook XML format.
Jesica Guidice has translated 4 of MGED's 16 introductory tutorials to