@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2010-02-XX  Release 7.16.8                                     ---
 ----------------------------------------------------------------------
 
+* remap_mater mged command to change material codes - Paul Tanenbaum
 * MGED help menu lists all commands with documentation - Cliff Yapp
 * Improved put_comb command usage and added documentation - Cliff Yapp
 * Improve behavior of editor invocation in classic mode - Cliff Yapp
